2008-Aug-28  yselkowitz

	* bin/cygport.in (__prepman): Do not compress lzma-compressed manpages.

2008-Aug-27  yselkowitz

	* configure.in: Post-release version bump.

	* Tagged 0.9.1.

	* lib/gst-plugins0.10.cygclass: Update module lists.

	* lib/xorg.cygclass: Drop xorg- prefix from font-* packages.

	* lib/gtk2-perl.cygclass (gtk2_perl_compile):
	man still subs '.' for '::', so we still need to rename the manpages.

	* tests/bootstrap:
	Always run make dist first, unless in distcheck. Clean up after test.

2008-Aug-26  yselkowitz

	* bin/cygport.in (__gpg_verify, __src_prep):
	Only warn about missing gnupg if there is a signature to verify.
	Only verify signatures if existant; don't warn about "missing" sigs.
	Verify signatures in PATCH_URI if existant.
	Catch error if signature verification fails.

	* bin/cygport.in (cygautoreconf, cygconf, src_compile):
	Moved out; auto-inherit autotools instead.
	lib/autotools.cygclass:
	lib/Makefile.am: Added new cygclass for cygautoreconf and cygconf.

	* bin/make_etc_defaults:
	bin/prep_fonts_dir.sh:
	bin/prep_gtk2_modules.sh:
	lib/docbook.cygclass (docbook_sgml_postinst, docbook_sgml_prerm):
	(docbook_xml_postinst, docbook_xml_prerm):
	lib/ggz.cygclass (ggz_postinst):
	lib/php.cygclass (php_postinst):
	Use fully qualified paths for all commands in postinstall scripts.

2008-Aug-24  yselkowitz

	* lib/wxwidgets.cygclass: WX_VERSION is mandatory, no default value.

	* lib/berkdb.cygclass: Java and Tcl bindings are optional, depending
	on whether their respective cygclasses have already been inherited.

	* bin/cygport.in (inherited): New function.

	* lib/cmake.cygclass: NEW for cygcmake() and default src_compile().
	lib/kde4.cygclass: Call it.
	lib/opensync.cygclass: Ditto.
	lib/qt4-cmake.cygclass: Ditto.
	bin/cygport.in (cygcmake): Removed.

	* bin/dolib: Use libtool to install libtool libraries.

	* bin/cygport.in (__prepdoc): Don't default install ABOUT-NLS or INSTALL.
