@@ -1,5 +1,8 @@
 2008-Aug-28  yselkowitz
 
+	* bin/cygport.in: Allow autotools.cygclass to be manually re-inherit()ed.
+	lib/autotools.cygclass: Document this feature.
+
 	* bin/cygport.in (__prepman): Do not compress lzma-compressed manpages.
 
 2008-Aug-27  yselkowitz
